tests/compile_fail/v3_receiver_method_removed.iron
object Player {
    var health: Int
    init(h: Int) {
        self.health = h
    }
    pub func get_health() -> Int {
        return self.health
    }
}

func (p: Player) take_damage(n: Int) {
    p.health = p.health - n
}
